--- a/ejercicio/index.html
+++ b/ejercicio/index.html
@@ -8,9 +8,10 @@
 </head>
 <body>
     <div class="card">
-        <h1>Oscar Segovia</h1>
-        <h2>Mini ejercicio- Programación</h2>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos vitae similique harum cumque voluptatum atque in iusto? Et hic, exercitationem quo rem, fugiat laborum beatae aliquid voluptatem quod voluptas est.</p>
+        <img src="/images/yo.jpeg" alt="yo" class="imagen">
+        <h1 class="card_title">Oscar Segovia</h1>
+        <h2 class="card_description">Mini ejercicio- Programación</h2>
+        <p class="card_content">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos vitae similique harum cumque voluptatum atque in iusto? Et hic, exercitationem quo rem, fugiat laborum beatae aliquid voluptatem quod voluptas est.</p>
     </div>
 </body>
 </html>
