Arreglos de diseños

--- a/index.html
+++ b/index.html
@@ -1,88 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8"> <!--Codificacion que tiene que utilizar-->
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="theme-color" content="red">
-    <title>Portfolio de Oscar Alvarado</title>
-
-    <meta name="description" content="Portfolio de oscar alvarado que 
-    es estudiante de ingeniería de sistemas">
-
-    <link rel="alternate" href="">
-    <link rel="stylesheet" href="css/styles.css">
-    <!--OPEN GRAPH-->
-    <meta property="agtitle" content="protfolio de un ingeniero de sistemas">
+    <title>Primera pagina web</title>
+    <meta name="author" content="Oscar Alvarado">
+    <meta name="description" content="Mi primera pagina web">
+    <meta name="keywords" content="tutorial, desarrollo web, Javascript">
+    <meta http-equiv="refresh" content="5; http://www.facebook.com">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Portfolio de Oscar Alvarado</h1>
-    <p>soy un apasionado por la <strong>Programación</strong> y soy estudiante
-    de ingeniería de sistemas</p>
-
-    <h2>Experiencia</h2>
-    <ul>
-        <li class="list-item">Trabaje como programador freelance - 2024</li>
-        <li class="list-item">Hice un aplicativo movil de objetos perdidos</li>
-        <li class="list-item">Me gusta muhco el lenguaje Javascript y sus frameworks</li>
-    </ul>
-    <img
-        id="photo-image" 
-        src="/images/yo.jpeg" 
-        alt="mi imagen de programador" 
-        title="Oscar"
-    >
-    <!--Este es un comentario para explicar-->
-    <input type="text">
-
-    <!--Vamos con el curso de dalto-->
-    <br>
-    <b>Texto en negrita</b>
-    <!--titulos-->
-    <h1>titulo en grande</h1>
-    <h2>titulo mas pequeño</h2>
-
-    <!--Este es un parrafo-->
-    <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae aliquid pariatur non quos magnam libero at, cum ipsa deserunt ab eveniet dolore molestias natus saepe eum nulla odit enim excepturi.
-    </p>
-
-    <!--LISTAS-->
-    <ul>
-        <h2>ESTUDIOS</h2>
-        <li>Bachiller tecnico</li>
-        <li>Tecnico en contabilidad</li>
-        <li>Tecnologo en desarrollo</li>
-        <li>ingeniería de sistemas</li>
-    </ul>
-
-    <ol>
-        <h2>Intituciones</h2>
-        <li>Insituto gabriela mistral</li>
-        <li>Unidades tecnologicas de santander</li>
-    </ol>
-
-    <!--ENLACES-->
-    <a href="https://github.com/OscarF2834">mi repositorio de github</a>
-    <br>
-    <!--Enlace que abre en otra pestaña-->
-    <a href="enlace2.html" target="_blank" title="Mis Diplomas">Diplomas</a>
-
-    <!--RUTAS-->
-    <!--Rutas aboslutas y rutas relativas-->
-    <a href=""></a>
-
-    <!--Seccion de formularios-->
-    <form action="">
-        <input type="text" required placeholder="escribe tu nombre" minlength="3" maxlength="20">
-        <input type="color">
-        <input type="submit" value="mandar">
-        <input type="email" required name="email">
-        <input type="password" name="contraseña">
-        <input type="checkbox">
-        <input type="radio">
-        <input type="file">
-        <input type="date">
-        <input type="submit">
-    </form>
+    <h1>Este es mi primer titulo</h1>
+    <script src="index.js"></script>
 </body>
 </html>
