Arreglo de diseños en la web

--- a/index.html
+++ b/index.html
@@ -7,11 +7,38 @@
     <meta name="author" content="Oscar Alvarado">
     <meta name="description" content="Mi primera pagina web">
     <meta name="keywords" content="tutorial, desarrollo web, Javascript">
-    <meta http-equiv="refresh" content="5; http://www.facebook.com">
     <link rel="stylesheet" href="style.css">
+
+    <style>
+        #table{
+            border-radius: 10%;
+            border: black;
+        }
+    </style>
 </head>
 <body>
     <h1>Este es mi primer titulo</h1>
-    <script src="index.js"></script>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias ullam, <br> 
+        illo necessitatibus doloribus perspiciatis nobis consectetur atque reiciendis <br>
+        magnam animi, nulla officia eius cumque distinctio. Non odit distinctio ipsa fugiat. <br>
+    </p>
+    <b>Negrita</b>
+    <i>Cursiva</i>
+
+    <p>Este texto es importante <strong>IMPORTANTE</strong></p>
+    <p>Este texto es enfatico <em>ENFATICO</em></p>
+
+    <blockquote> <strong>"Esta es mi frase de: Oscar Alvarado"</strong></blockquote>
+    <q>La locura es hacer lo mismo una y otra vez</q>
+
+    <hr>
+
+    <!--Esta es una tabla e HTML-->
+    <tr class="table">
+        <td>Esta es la primer dato</td>
+        <td>Esta es el segundo dato</td>
+        <td>Esta es el tercer dato</td>
+        <td>Esta es el cuarto dato</td>
+    </tr>
 </body>
 </html>
