subida de cambios y archivos

--- a/fundamentos/index.html
+++ b/fundamentos/index.html
@@ -210,5 +210,19 @@
     <dialog>Esta es una ventana modal en HTML</dialog>
     <a href="index.html#inicio"> ☝️</a>
 
+    <hr>
+
+    <h2>Audio y video</h2>
+
+    <audio src="/images/audio.mp3" controls preload=""></audio>
+    <br>
+    <video src="/images/video.mp4" controls preload="auto" poster="/images/pajaro.jpg"></video>
+
+    <hr>
+
+    <h2>Iframe</h2>
+
+    <iframe src="/images/CV_OSCAR_ALVARADO.pdf.pdf" frameborder="1"></iframe>
+
 </body>
 </html>
