vista de formulario y sus atributos con imputs

--- a/fundamentos/index.html
+++ b/fundamentos/index.html
@@ -224,5 +224,47 @@
 
     <iframe src="/images/CV_OSCAR_ALVARADO.pdf.pdf" frameborder="1"></iframe>
 
+    <hr>
+
+    <h2>Formularios</h2>
+    <h3>Elementos de formularios</h3>
+
+    <input type="button" value="texto boton">
+    <br>
+    <input type="submit">
+    <br>
+    <input type="reset">
+    <br>
+    <input type="file" multiple>
+    <br>
+    <input type="email">
+    <input type="number">
+
+    <select name="" id="" multiple>
+        <option value="">HTML</option>
+        <option value="">CSS</option>
+        <option value="">JavaScript</option>
+    </select>
+
+    <br>
+    <input type="text" disabled readonly value="Input desabilitado">
+    <br>
+    <input type="text" placeholder="Inserta tu nombre">
+
+    <br>
+    <br>
+
+    <form action="" autocomplete="on">
+        <h3>Ejemplo de formulario</h3>
+        <label for="usuario">Usuario</label>
+        <input type="text" name="usuario" id="usuario" title="El campo solo acepta letras" required>
+        <br>
+        <label for="">Contraseña</label>
+        <input type="password">
+        <input type="submit">
+        <br>
+        <input type="reset">
+    </form>
+
 </body>
 </html>
