--- a/fundamentos/index.html
+++ b/fundamentos/index.html
@@ -266,5 +266,19 @@
         <input type="reset">
     </form>
 
+    <br>
+
+    <form action="https://formsubmit.co/pipesegoviaalvarado@gmail.com" method="post">
+        <h3>Formulario de contacto</h3>
+        <input type="text" name="nombre" placeholder="Ingresa tu nombre">
+        <br>
+        <input type="text" name="apellido" placeholder="Ingresa tu apellido">
+        <br>
+        <textarea name="comentario" id="" placeholder="Ingresa tu comentario"></textarea>
+        <br>
+        <input type="submit" name="enviar">
+        <input type="reset" name="resetear">
+    </form>
+
 </body>
 </html>
