--- a/css/index.html
+++ b/css/index.html
@@ -3,10 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/styles.css">
     <title>Curso de CSS</title>
 </head>
 <body>
     <h1>Aprendiendo CSS</h1>
+
     <p><i>Cascading Style sheet</i> Hojas de estilos en cascada</p>
+
+    <h2 id="inicio">Temario del curso</h2>
+
+    <ul>
+        <li><a href="index.html#selectores-basicos">selectores basicos</a></li>
+    </ul>
+
+    <hr>
+
+    <article id="selectores-basicos">
+        <h2>Selectores básicos</h2>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iusto eaque 
+            quas placeat eius fuga laboriosam nesciunt praesentium commodi recusandae,
+             aspernatur dolore! Rem, voluptatum ipsam. Voluptates quod tempore culpa odio deleniti.
+        </p>
+        <p id="parrafo-dos">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla voluptatem placeat 
+            esse iusto sed, mollitia sequi id nesciunt quos, quidem labore. Voluptatem 
+            eius quod nam debitis minima accusantium in necessitatibus?
+        </p>
+        <p class="texto-32">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt doloremque quas 
+            aut quo repellat ad consectetur tenetur veniam hic saepe itaque ipsa, quod 
+            quia vel fugiat, placeat non numquam assumenda!
+        </p>
+    </article>
+
+    <a href="index.html#inicio">☝️</a>
 </body>
 </html>
