--- a/css/index.html
+++ b/css/index.html
@@ -37,6 +37,40 @@
         </p>
     </article>
 
+    <article id="selectores-avanzados">
+        <h2>Selectores avanzados</h2>
+        <h3>Selectores Hijos</h3>
+        <h4>Selector de hijo directo</h4>
+        <ul class="hijos-directos">
+            <li><b>Primavera</b></li>
+            <li><b>Verano</b></li>
+            <li><b>Otoño</b></li>
+            <li><b>Invierno</b></li>
+        </ul>
+        <h4>Selector de hijos desendientes</h4>
+        <ul class="hijos-descendientes">
+            <li><b>Primavera</b></li>
+            <li><b>Verano</b></li>
+            <li><b>Otoño</b></li>
+            <li><b>Invierno</b></li>
+        </ul>
+        <h3>Selectores hermanos</h3>
+        <h4>Selector de hermanos(en general)</h4>
+        <ul>
+            <li class="hermanos-general"><b>Primavera</b></li>
+            <li><b>Verano</b></li>
+            <li><b>Otoño</b></li>
+            <li><b>Invierno</b></li>
+        </ul>
+        <h4>Selector de hermanos adyacente</h4>
+        <ul>
+            <li class="hermanos-adyacente"><b>Primavera</b></li>
+            <li><b>Verano</b></li>
+            <li><b>Otoño</b></li>
+            <li><b>Invierno</b></li>
+        </ul>
+    </article>
+
     <a href="index.html#inicio">☝️</a>
 </body>
 </html>
