--- a/css/index.html
+++ b/css/index.html
@@ -69,6 +69,48 @@
             <li><b>Otoño</b></li>
             <li><b>Invierno</b></li>
         </ul>
+
+        <hr>
+
+        <h3>Selector de atributos</h3>
+        <nav class="selectores-atributos">
+            <ul>
+                <li><a href="https://jonmircha.com" target="_blank"> Inicio</a></li>
+                <li><a class="menu-item cursos button" href="https://jonmircha.com/cursos" target="_blank"> Cursos</a></li>
+                <li><a href="http://jonmircha.com/blog" target="_blank"> Blog</a></li>
+                <li><a href="https://jonmircha.com/cv" target="_blank"> CV</a></li>
+                <li><a href="https://jonmircha.com/ahora" target="_blank"> Ahora</a></li>
+                <li><a class="menu-item cursos notas"  href="http://jonmircha.com/notas" target="_blank"> Notas</a></li>
+                <li><a href="index.html#inicio"> Inicio </a></li>
+            </ul>
+        </nav>
+
+        <hr>
+        <article id="pseudoclases">
+            <h2>pseudoclases</h2>
+            <form class="form-pseudoclases">
+                <input type="text" name="nombre" placeholder="escribe tu nombre" required> 
+                <br>
+                <input type="email" name="correo" placeholder="escribe tu corre" required>
+                <br>
+                <input type="submit" disabled>
+            </form>
+
+            <nav class="menu-pseudoclases">
+                <a href="#seccion1">Seccion 1</a>
+                <a href="#seccion2">Seccion 2</a>
+                <a href="#seccion3">Seccion 3</a>
+                <a href="#seccion4">Seccion 4</a>
+            </nav>
+
+            <p class="p-pseudoclase">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam, 
+                ducimus iusto vitae error consequatur dolor dicta aut doloremque dolorem, 
+                adipisci sunt quam sit culpa, a autem! Omnis quaerat temporibus velit.
+            </p>
+        </article>
+
+       
     </article>
 
     <a href="index.html#inicio">☝️</a>
