pseudoclases de acuerdo a la posicion

--- a/css/index.html
+++ b/css/index.html
@@ -110,6 +110,21 @@
             </p>
         </article>
 
+        <h3>Lista de pseudoclases</h3>
+        <ol class="lista-pseudoclases">
+            <li>Mú de aires</li>
+            <li>Aldebaran de tauro</li>
+            <li>saga y kanon de geminis</li>
+            <li>Death mask de cancer</li>
+            <li>aioria de leo</li>
+            <li>shaka de virgo</li>
+            <li>dohko de libra</li>
+            <li>milo de escorpion</li>
+            <li>aiorios de sagitario</li>
+            <li>shuka de capricornio</li>
+            <li>camus de acuario</li>
+            <li>afrodita de piscis</li>
+        </ol>
        
     </article>
 
