--- a/css/index.html
+++ b/css/index.html
@@ -125,6 +125,45 @@
             <li>camus de acuario</li>
             <li>afrodita de piscis</li>
         </ol>
+
+        <hr>
+        <article id="pseudoelementos">
+             <h3>pseudoelementos</h3>
+             <p>
+                <i>Bandai mith cloth ex</i> <span class="saga-geminis">Saga de geminis</span> 
+                <span class="saga-precio">500</span>
+             </p>
+             <p class="p-pseudolementos">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Adipisci sequi,
+                 quo unde cupiditate esse cumque excepturi. Porro rem libero, non obcaecati 
+                 id qui placeat nam aliquam repellat quis quibusdam eligendi.
+             </p>
+             <br>
+             <input type="text" name="nombre" placeholder="nombre de usuario" class="input-pseudoelementos">
+        </article>
+
+        <article id="agrupacion-selectores">
+            <hr>
+            <h2>Agrupacion de selectores</h2>
+            <form action="" class="form-agrupar-selectores">
+                <input type="text" name="nombre" placeholder="escribe su nombre"> <br>
+                <input type="email" name="email" placeholder="escriba su correo"> <br>
+                <textarea name="comentarios" placeholder="escribe tus comentarios" rows="10" cols="20"></textarea>
+                <br>
+                <input type="submit">
+            </form>
+        </article>
+        <br>
+        <hr>
+
+        <article id="algoritmo-css">
+            <h2>El algoritmo de css</h2>
+            <ul class="lista-algoritmo-css">
+                <li>La cascada</li>
+                <li>La especifidad</li>
+                <li>la herencia</li>
+            </ul>
+        </article>
        
     </article>
 
