algoritmo de css

--- a/css/index.html
+++ b/css/index.html
@@ -163,6 +163,9 @@
                 <li>La especifidad</li>
                 <li>la herencia</li>
             </ul>
+            <blockquote id="cita-marco" class="cita-marco">
+                se tolerante con los demas y se esricto contigo mismo <cite>Marco Aurelio</cite>
+            </blockquote>
         </article>
        
     </article>
