--- a/css/index.html
+++ b/css/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/styles.css">
     <title>Curso de CSS</title>
 </head>
+
 <body>
     <h1>Aprendiendo CSS</h1>
 
@@ -21,18 +23,18 @@
 
     <article id="selectores-basicos">
         <h2>Selectores básicos</h2>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iusto eaque 
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iusto eaque
             quas placeat eius fuga laboriosam nesciunt praesentium commodi recusandae,
-             aspernatur dolore! Rem, voluptatum ipsam. Voluptates quod tempore culpa odio deleniti.
+            aspernatur dolore! Rem, voluptatum ipsam. Voluptates quod tempore culpa odio deleniti.
         </p>
         <p id="parrafo-dos">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla voluptatem placeat 
-            esse iusto sed, mollitia sequi id nesciunt quos, quidem labore. Voluptatem 
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla voluptatem placeat
+            esse iusto sed, mollitia sequi id nesciunt quos, quidem labore. Voluptatem
             eius quod nam debitis minima accusantium in necessitatibus?
         </p>
         <p class="texto-32">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt doloremque quas 
-            aut quo repellat ad consectetur tenetur veniam hic saepe itaque ipsa, quod 
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt doloremque quas
+            aut quo repellat ad consectetur tenetur veniam hic saepe itaque ipsa, quod
             quia vel fugiat, placeat non numquam assumenda!
         </p>
     </article>
@@ -76,11 +78,12 @@
         <nav class="selectores-atributos">
             <ul>
                 <li><a href="https://jonmircha.com" target="_blank"> Inicio</a></li>
-                <li><a class="menu-item cursos button" href="https://jonmircha.com/cursos" target="_blank"> Cursos</a></li>
+                <li><a class="menu-item cursos button" href="https://jonmircha.com/cursos" target="_blank"> Cursos</a>
+                </li>
                 <li><a href="http://jonmircha.com/blog" target="_blank"> Blog</a></li>
                 <li><a href="https://jonmircha.com/cv" target="_blank"> CV</a></li>
                 <li><a href="https://jonmircha.com/ahora" target="_blank"> Ahora</a></li>
-                <li><a class="menu-item cursos notas"  href="http://jonmircha.com/notas" target="_blank"> Notas</a></li>
+                <li><a class="menu-item cursos notas" href="http://jonmircha.com/notas" target="_blank"> Notas</a></li>
                 <li><a href="index.html#inicio"> Inicio </a></li>
             </ul>
         </nav>
@@ -89,7 +92,7 @@
         <article id="pseudoclases">
             <h2>pseudoclases</h2>
             <form class="form-pseudoclases">
-                <input type="text" name="nombre" placeholder="escribe tu nombre" required> 
+                <input type="text" name="nombre" placeholder="escribe tu nombre" required>
                 <br>
                 <input type="email" name="correo" placeholder="escribe tu corre" required>
                 <br>
@@ -104,8 +107,8 @@
             </nav>
 
             <p class="p-pseudoclase">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam, 
-                ducimus iusto vitae error consequatur dolor dicta aut doloremque dolorem, 
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam,
+                ducimus iusto vitae error consequatur dolor dicta aut doloremque dolorem,
                 adipisci sunt quam sit culpa, a autem! Omnis quaerat temporibus velit.
             </p>
         </article>
@@ -128,18 +131,18 @@
 
         <hr>
         <article id="pseudoelementos">
-             <h3>pseudoelementos</h3>
-             <p>
-                <i>Bandai mith cloth ex</i> <span class="saga-geminis">Saga de geminis</span> 
+            <h3>pseudoelementos</h3>
+            <p>
+                <i>Bandai mith cloth ex</i> <span class="saga-geminis">Saga de geminis</span>
                 <span class="saga-precio">500</span>
-             </p>
-             <p class="p-pseudolementos">
+            </p>
+            <p class="p-pseudolementos">
                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Adipisci sequi,
-                 quo unde cupiditate esse cumque excepturi. Porro rem libero, non obcaecati 
-                 id qui placeat nam aliquam repellat quis quibusdam eligendi.
-             </p>
-             <br>
-             <input type="text" name="nombre" placeholder="nombre de usuario" class="input-pseudoelementos">
+                quo unde cupiditate esse cumque excepturi. Porro rem libero, non obcaecati
+                id qui placeat nam aliquam repellat quis quibusdam eligendi.
+            </p>
+            <br>
+            <input type="text" name="nombre" placeholder="nombre de usuario" class="input-pseudoelementos">
         </article>
 
         <article id="agrupacion-selectores">
@@ -167,9 +170,90 @@
                 se tolerante con los demas y se esricto contigo mismo <cite>Marco Aurelio</cite>
             </blockquote>
         </article>
-       
+
+        <p class="caja-uno">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur eos dicta quaerat
+            aspernatur? Quisquam, nobis rerum commodi fugit accusantium deleniti, ipsa quam officiis
+            temporibus, alias pariatur possimus tenetur ea enim?
+        </p>
+        <p class="caja-dos">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi, vero nisi labore, necessitatibus
+            alias porro odit saepe temporibus illo facilis animi incidunt nesciunt atque quas! Aspernatur vel
+            explicabo nisi molestiae.
+        </p>
+
+        <hr>
+
+        <h2>Propiedad Display</h2>
+
+        <div class="caja-none">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio dolor ex natus maiores
+            aspernatur dicta quasi harum soluta quaerat, sed accusantium, consectetur aliquid ea quia
+            excepturi animi reprehenderit magni! Pariatur?
+        </div>
+
+        <hr>
+
+        <h2>Propiedad visibility</h2>
+
+        <div class="caja-none">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio dolor ex natus maiores
+            aspernatur dicta quasi harum soluta quaerat, sed accusantium, consectetur aliquid ea quia
+            excepturi animi reprehenderit magni! Pariatur?
+        </div>
+
+        <div class="caja-hidden">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio dolor ex natus maiores
+            aspernatur dicta quasi harum soluta quaerat, sed accusantium, consectetur aliquid ea quia
+            excepturi animi reprehenderit magni! Pariatur?
+        </div>
+
+        <hr>
+
+        <h2>Propiedad Overflow</h2>
+        <p class="overflow">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ab molestiae sit hic dicta
+            maiores! Possimus recusandae ex quae minus veritatis assumenda, doloribus nam officiis
+            deserunt quam sit sed inventore. Enim?
+        </p>
+
+        <hr>
+
+        <h2>Tamaño de la Caja</h2>
+        <div class="box-sizing-content">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Est voluptas, delectus eaque
+            veniam quia quaerat. Dolore ipsa officiis atque at, rem accusamus error optio suscipit
+            sequi sint laborum nesciunt fuga!
+        </div>
+        <div class="box-sizing-border">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Est voluptas, delectus eaque
+            veniam quia quaerat. Dolore ipsa officiis atque at, rem accusamus error optio suscipit
+            sequi sint laborum nesciunt fuga!
+        </div>
+
+        <article class="container-col-3">
+            <section class="item">Seccion 1</section>
+            <section class="item">Seccion 2</section>
+            <section class="item">Seccion 3</section>
+        </article>
+
     </article>
 
+    <br>
+    <hr>
+    <h2>Propiedad Float y clear</h2>
+
+    <article class="container-float">
+        <section class="float-right">Este elemento flota a la derecha</section>
+        <section class="">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            Fugiat dignissimos natus explicabo placeat laudantium est vel molestias iusto rem laboriosam, 
+            in repellendus ab. Animi explicabo quaerat vel, minus illum molestias.
+        </section>
+        <section class="float-left">Este elemento flota a la izquierda</section>
+    </article>
+    
     <a href="index.html#inicio">☝️</a>
 </body>
+
 </html>
