terminacion conceptos de cajas

--- a/css/index.html
+++ b/css/index.html
@@ -252,7 +252,28 @@
         </section>
         <section class="float-left">Este elemento flota a la izquierda</section>
     </article>
-    
+
+    <hr>
+    <h2>Colapso de margenes verticales</h2>
+    <div>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam omnis ipsam modi quam! 
+        Tempora consequatur excepturi voluptates commodi nam iste velit corrupti facilis exercitationem, 
+        dolor blanditiis quidem unde ratione doloremque.
+    </div>
+
+    <article class="margin-colapse">
+        <section>Seccion 1</section>
+        <section>Seccion 2</section>
+        <section><span>span 1</span><span>span 2</span><span>span 3</span></section>
+    </article>
+
+    <hr>
+    <h2>Centrado de cajas</h2>
+    <article class="sitio-web">
+        <header>Cabecera</header>
+        <main>Contenido Principal</main>
+        <footer>Pie de pagina</footer>
+    </article>
     <a href="index.html#inicio">☝️</a>
 </body>
 
