Posicionamiento y profundidad en CSS

--- a/css/posicionamiento/index.html
+++ b/css/posicionamiento/index.html
@@ -10,5 +10,13 @@
     <h1>Posicionamiento en CSS</h1>
     <div class="static">Caja Estatica</div>
     <div class="relative">Caja Relativa</div>
+
+    <hr>
+    <h2>Posicionamiento Z-index</h2>
+    <div class="z-index-1">Probando z-indez caja uno</div>
+    <div class="z-index-2">Probando z-indez caja dos</div>
+    <section class="z-index-parent">
+        <div class="z-index-child"> hijo z-index</div>
+    </section>
 </body>
 </html>
