Unidades de medida

--- a/colores/index.html
+++ b/colores/index.html
@@ -4,9 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Colores</title>
+    <title>Colores en CSS</title>
 </head>
 <body>
-    <div class="box"><h1>Oscar</h1></div>
+    <h1>Colores en CSS</h1>
+    <h2>Valores transparentes y currentColor</h2>
+    <div class="color-transparent-current">
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, illum non explicabo 
+            id quaerat quam voluptatibus cumque aliquam ad provident ab placeat iste quisquam, eligendi 
+            perspiciatis expedita labore, alias molestias?
+        </p>
+    </div>
+    <div class="opacity">
+        <h2>Opacidad</h2>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, illum non explicabo 
+            id quaerat quam voluptatibus cumque aliquam ad provident ab placeat iste quisquam, eligendi 
+            perspiciatis expedita labore, alias molestias?
+        </p>
+    </div>
 </body>
 </html>
