Unidades de medida

--- a/colores/index.html
+++ b/colores/index.html
@@ -1,28 +1,56 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Colores en CSS</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Colores en CSS</h1>
     <h2>Valores transparentes y currentColor</h2>
     <div class="color-transparent-current">
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, illum non explicabo 
-            id quaerat quam voluptatibus cumque aliquam ad provident ab placeat iste quisquam, eligendi 
-            perspiciatis expedita labore, alias molestias?
-        </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio,
+        illum non explicabo id quaerat quam voluptatibus cumque aliquam ad
+        provident ab placeat iste quisquam, eligendi perspiciatis expedita
+        labore, alias molestias?
+      </p>
     </div>
     <div class="opacity">
-        <h2>Opacidad</h2>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, illum non explicabo 
-            id quaerat quam voluptatibus cumque aliquam ad provident ab placeat iste quisquam, eligendi 
-            perspiciatis expedita labore, alias molestias?
-        </p>
+      <h2>Opacidad</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio,
+        illum non explicabo id quaerat quam voluptatibus cumque aliquam ad
+        provident ab placeat iste quisquam, eligendi perspiciatis expedita
+        labore, alias molestias?
+      </p>
     </div>
-</body>
+
+    <h2>Rems (Root em)</h2>
+    <div class="rems">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio et
+      placeat, id optio tempore unde? Laudantium ipsa soluta ullam nam esse
+      repudiandae est maxime doloremque adipisci, quis ad pariatur praesentium!
+      <section class="rem-child">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam ducimus
+        animi excepturi reprehenderit modi perferendis tempore quidem sequi.
+        Veritatis vero voluptates suscipit reprehenderit facere quis distinctio
+        repudiandae vitae non accusamus?
+      </section>
+    </div>
+    <h2>CHs</h2>
+    <div class="chs">
+      1234567890
+    </div>
+    <div class="chs">
+      helloaayuad
+    </div>
+    <h2>Viewport units</h2>
+    <div class="viewport">
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis voluptate, 
+        repudiandae temporibus quas maiores iure repellendus cupiditate doloremque
+         autem architecto in. Et aperiam consequuntur quae dolor sint provident totam perspiciatis!
+    </div>
+  </body>
 </html>
