Variables y personalizaciones propias en CSS

--- a/colores/index.html
+++ b/colores/index.html
@@ -52,5 +52,14 @@
         repudiandae temporibus quas maiores iure repellendus cupiditate doloremque
          autem architecto in. Et aperiam consequuntur quae dolor sint provident totam perspiciatis!
     </div>
+
+    <h2>Variables en CSS</h2>
+    <article class="var-custom-1">
+      <div class="var-custom-2">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione accusamus 
+        sapiente nemo nostrum atque qui officia, quos id similique veniam repellendus 
+        ipsa esse, sed fugit alias, eveniet debitis eligendi corporis.
+      </div>
+    </article>
   </body>
 </html>
