Medidas y estilos de fondo

--- a/ejercicio/index.html
+++ b/ejercicio/index.html
@@ -7,11 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="card">
-        <img src="/images/yo.jpeg" alt="yo" class="imagen">
-        <h1 class="card_title">Oscar Segovia</h1>
-        <h2 class="card_description">Mini ejercicio- Programación</h2>
-        <p class="card_content">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos vitae similique harum cumque voluptatum atque in iusto? Et hic, exercitationem quo rem, fugiat laborum beatae aliquid voluptatem quod voluptas est.</p>
-    </div>
+    <div class="box" id="uno">Uno</div>
+    <div class="box" id="dos">Dos</div>
+    <div class="box" id="tres">Tres</div>
+    <div class="box" id="cuatro">Cuatro</div>
 </body>
 </html>
